Fix align of last page

--- a/styles/style_main.css
+++ b/styles/style_main.css
@@ -288,7 +288,7 @@ span {
   margin: 15px;
 }
 .Account > .Line {
-  min-width: 100px;
+  min-width: 120px;
   flex-direction: row;
   justify-content: flex-end;
   display: inline-flex;
